syntax = "proto3";
package sgn.slash.v1;

option go_package = "github.com/celer-network/sgn-v2/x/slash/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

message AcctAmtPair {
  // bech32-encoded sgn address (sdk.AccAddress)
  string account = 1 [(gogoproto.moretags) = "yaml:\"account\""];
  string amount = 2 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"];
}

message Sig {
  string signer = 1;
  bytes sig = 2;
}

message Slash {
  // bech32-encoded sgn address (sdk.AccAddress)
  string validator = 1 [(gogoproto.moretags) = "yaml:\"validator\""];
  uint64 nonce = 2;
  uint64 slash_factor = 3;
  uint64 expire_time = 4;
  uint64 jail_period = 5;
  repeated AcctAmtPair collectors = 6 [(gogoproto.nullable) = false];
  string reason = 7;
  bytes eth_slash_bytes = 8 [(gogoproto.moretags) = "yaml:\"eth_slash_bytes\""];
  repeated Sig sigs = 9 [(gogoproto.nullable) = false];
}

message Params {
  bool enable_slash = 1 [(gogoproto.moretags) = "yaml:\"enable_slash\""];
  int64 signed_blocks_window = 2 [(gogoproto.moretags) = "yaml:\"signed_blocks_window\""];
  uint64 slash_timeout = 3 [(gogoproto.moretags) = "yaml:\"slash_timeout\""];
  uint64 slash_factor_double_sign = 4 [
    (gogoproto.moretags)   = "yaml:\"slash_factor_double_sign\""
  ];
  uint64 slash_factor_downtime = 5 [
    (gogoproto.moretags)   = "yaml:\"slash_factor_downtime\""
  ];
  uint64 jail_period = 6 [
    (gogoproto.moretags)   = "yaml:\"jail_period\""
  ];
  bytes min_signed_per_window = 7 [
    (gogoproto.moretags) = "yaml:\"min_signed_per_window\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message QuerySlashParams {
  uint64 nonce = 1;
}

